--- a/mensaje.html
+++ b/mensaje.html
@@ -28,10 +28,10 @@
   <!-- Letras que se elevan desde abajo -->
   <div class="burbujas-texto">
     <span>Feliz Cumpleaños</span>
-    <span>Te Amo</span>
-    <span>Amor</span>
+    <span>💗</span>
+    <span>feliz💗</span>
     <span>Besos</span>
-    <span>Caricias</span>
+    <span>Te Quiero</span>
     <span>Eres Especial</span>
   </div>
 
